K8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: wisecow
spec:
  selector:
    app: wisecow
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
