K8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  namespace: wisecow
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # If using cert-manager you can add cert-manager annotation
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - wisecow.example.com
      secretName: wisecow-tls
  rules:
    - host: wisecow.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wisecow-service
                port:
                  number: 80
